# graphics_learn

t1/: CMakePresets.json  main.cpp
t2/: CMakeLists.txt  CMakePresets.json  main.cpp
t3/: CMakeLists.txt  main.cpp
t4/: index.html  index.js
